Java与XML，并用Dom4j架包处理解析和创建XML。

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
             "org.springframework:spring-jdbc:${springFrameworkVersion}"
 
     compile 'org.codehaus.groovy:groovy-all:2.1.6'
+    compile 'dom4j:dom4j:1.6.1'
 
     testCompile 'junit:junit:4.11'
 
