--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'dom4j:dom4j:1.6.1'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'commons-codec:commons-codec:1.10'
+    compile 'commons-io:commons-io:2.4'
 
 
     testCompile 'junit:junit:4.11'
